<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="312dp"
        android:layout_height="357dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="278dp"
        android:autofillHints=""
        android:background="@drawable/background"
        android:ems="10"
        android:gravity="top|start"
        android:hint="@string/enter_your_text_here"
        android:inputType="textMultiLine"
        android:maxLines="14"
        android:padding="6dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/createButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextText"
        android:layout_marginStart="271dp"
        android:layout_marginTop="480dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="203dp"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/createButton"
        android:layout_marginStart="161dp"
        android:layout_marginTop="480dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="203dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/openButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/saveButton"
        android:layout_marginStart="49dp"
        android:layout_marginTop="480dp"
        android:layout_marginEnd="274dp"
        android:layout_marginBottom="203dp"
        android:text="@string/open"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="66dp"
        android:layout_marginTop="674dp"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="38dp"
        android:text="@string/creators"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fileNameEditText"
        android:layout_width="301dp"
        android:layout_height="48dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="660dp"
        android:width="300dp"
        android:height="200dp"
        android:background="@drawable/background"
        android:ems="10"
        android:hint="@string/enter_filename"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>